# EPICX-FRAMEWORK-DirectX12

./: Cargo.toml  README.md  ejecutar_fácil.md
examples/: component_demo.rs  cube_dx12.rs  cube_window.rs  dx12_cube.rs  easy_demo.rs  game_scene.rs  gpu_cube.rs  hello_triangle.rs  rotating_cube.rs  rotating_cube_3d.rs  sdf_scene.rs  simple_cube.rs  vulkan_cube.rs
shaders/: cube.hlsl  cube_sdf.hlsl  sdf_antialiasing.hlsl  triangle.hlsl  vector3d_demo.hlsl  vector3d_raymarching.hlsl  wave_test.hlsl
src/: lib.rs
src/components/: button.rs  canvas.rs  container.rs  image_component.rs  mod.rs  text_component.rs
src/core/: app.rs  component.rs  context.rs  element.rs  mod.rs  props.rs  state.rs
src/dx12/: buffer.rs  command_queue.rs  descriptor_heap.rs  device.rs  fence.rs  gpu_info.rs  mod.rs  pipeline.rs  shader.rs  swap_chain.rs  texture.rs
src/easy/: mod.rs
src/events/: mod.rs
src/graphics/: context.rs  frame.rs  mod.rs  renderer3d.rs  resources.rs
src/hooks/: mod.rs
src/isr/: mod.rs
src/lang/: ast.rs  lexer.rs  mod.rs  parser.rs
src/math/: color.rs  mod.rs  rect.rs  transform.rs
src/renderer/: mod.rs  render_pass.rs
src/sdf/: antialiasing.rs  bezier.rs  mod.rs  operations.rs  primitives.rs
src/window/: mod.rs
